# rust-git-version

./: Cargo.toml
git-version-core/: Cargo.toml
git-version-core/src/: lib.rs  utils.rs
git-version-macro/: Cargo.toml
git-version-macro/src/: lib.rs
src/: lib.rs
tests/: version.rs
