[package]
name = "git-version-core"
version = "0.0.1"
edition = "2018"
description = "Internal auxiliary functions for git-version."
repository = "https://github.com/fusion-engineering/rust-git-version"
keywords = ["git"]
license = "BSD-2-Clause"

[features]
nightly = []

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = "1.0"
